--- a/Homework/Homework 3 - Building Functions and Visualizing Distributions.ipynb
+++ b/Homework/Homework 3 - Building Functions and Visualizing Distributions.ipynb
@@ -299,18 +299,29 @@
     "        \n",
     "print(\"Does each element of aa exist within bb:\",all_a_in_b(aa,bb))\n",
     "print(\"Does each element of cc exist within dd:\",all_a_in_b(cc,dd))\n",
-    "print(\"Does each element of ee exist within ff:\",all_a_in_b(ee,ff))\n",
-    "\n",
-    "# The function accppts two seperatre lists. The function uses the set() method to produce\n",
-    "# a distinct list of elements of input list \"a\". The fucnction also uses the issubset() method \n",
-    "# to return a list of distinct elements of list \"b\". If distinct values of a is indeed a subset of distinct values of b, \n",
-    "# the the returned variable is set to \"True\"; otherwise, the return variable is set to \"False\""
+    "print(\"Does each element of ee exist within ff:\",all_a_in_b(ee,ff))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "53c0b55f",
+   "metadata": {},
+   "source": [
+    "The function above accepts two seperatre lists. The function uses the set() method to produce a distinct list of elements of input list \"a\". The fucnction also uses the issubset() method to return a list of distinct elements of list \"b\". If distinct values of a is indeed a subset of distinct values of b, the the returned variable is set to \"True\"; otherwise, the return variable is set to \"False\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6120b976",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
